# nekro_plugin_mem0

./: .gitignore  CLAUDE.md  DIAGNOSTIC_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  chatluna_longmemory_analysis.md  config.py  dedup_simhash.py  dedup_similarity.py  emgas_decay.py  emgas_ppmi.py  emgas_spreading.py  enhanced_memory.py  extraction_parser.py  extraction_prompts.py  hippo_alias_merge.py  hippo_entity_extraction.py  hippo_pagerank.py  mem0_output_formatter.py  mem0_utils.py  memory_engine_base.py  memory_engine_basic.py  memory_engine_emgas.py  memory_engine_hippo.py  memory_engine_router.py  plugin.py  plugin_method.py  pre_search_utils.py  pyproject.toml  pyrightconfig.json  query_rewrite.py  requirements.txt  simple_test.py  test_memory_scope_risks.py  test_plugin_mock.py  test_plugin_structure.py  test_pre_search.py  utils.py  诊断结果总结.txt
.serena/: project.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-default-weight.txt  task-2-return-type.txt  task-4-no-hardcode.txt  task-5-independent-threshold.txt  task-6-log-demoted.txt  task-7-full-test.txt
.sisyphus/notepads/fix-presearch-threshold/: learnings.md
.sisyphus/plans/: fix-presearch-threshold.md
docs/: DEVELOPMENT_NOTES.md
mem0_memory/: utils.py
nekro_plugin_mem0/: plugin.py
nekro_plugin_memory/: __init__.py  mem0_output_formatter.py  mem0_utils.py  plugin.py  plugin_method.py  utils.py
scripts/: migrate_legacy_scopes.py
