[tool.poetry]
name = "nekro_plugin_mem0"
version = "1.2.0"
description = "Nekro Agent 长期记忆插件，基于 mem0 实现"
authors = ["johntime2005 <johntime2005@github.com>"]
readme = "README.md"
packages = [{include = "nekro_plugin_mem0"}]
repository = "https://github.com/johntime2005/nekro-plugin-mem0"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nekro-agent = ">=1.0.0"
mem0ai = "^1.0.1"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple/"
# priority = "primary"

[tool.black]
line-length = 128

[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
